<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/cat_system">

        <SwitchPreferenceCompat
            app:key="start_on_boot"
            app:title="@string/pref_start_on_boot"
            app:summary="@string/pref_start_on_boot_sum"
            app:icon="@android:drawable/ic_lock_power_off"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="longpress_theme"
            app:title="@string/pref_longpress_theme"
            app:summary="@string/pref_longpress_theme_sum"
            app:icon="@android:drawable/ic_menu_rotate"
            app:defaultValue="true" />

        <Preference
            app:key="activate_license"
            app:title="@string/pref_activate_license"
            app:summary="@string/pref_activate_license_sum"
            app:icon="@android:drawable/ic_menu_manage" />
    </PreferenceCategory>

</PreferenceScreen>
